samples/_failures_safe/1761338881_f87713_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_162750e9.c: In function ‘matrix_mul’:
./samples/SAFE/__tmp_162750e9.c:129:13: error: expected identifier or ‘(’ at end of input
  129 |             for (int
      |             ^~~
./samples/SAFE/__tmp_162750e9.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_162750e9.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_162750e9.c:129:13: error: expected declaration or statement at end of input
